# templates

./: flake.nix
haskell/: PACKAGENAME.cabal  flake.nix
shell/: default.nix
stack/: flake.nix  stack.yaml
