name:                PACKAGENAME
version:             0.1.0.0
synopsis:            Simple project template
description:         Please see README.md
homepage:            https://github.com/bitemyapp/hello#readme
license:             LICENSE_GOES_HERE
license-file:        LICENSE
author:              Gavin Downard
maintainer:          gavin.downard@runbox.com
copyright:           2021, Gavin Downard
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hello
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hello

library
  hs-source-dirs:      src
  exposed-modules:     Hello
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
